--- a/src/app/components/generic/view-document/view-document.component.html
+++ b/src/app/components/generic/view-document/view-document.component.html
@@ -60,8 +60,8 @@
 
       <!-- Image Content - For all document types except video media -->
       <div *ngIf="shouldShowImage()" class="image-container mb-3">
-        <img [src]="currentImageUrl | imageUrl" alt="Document Image" class="img-fluid rounded document-image"
-          (click)="openLightbox(currentImageUrl!)"
+        <img [src]="currentImageUrl | imageUrl" alt="Document Image"
+          class="img-fluid rounded document-image clickable-image" (click)="openLightbox(currentImageUrl!)"
           style="max-height: 500px; width: 100%; object-fit: contain; cursor: pointer;" />
       </div>
 
